kubernetes/Int/deployments/media/readarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: media
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
        - name: readarr
          image: linuxserver/readarr:0.4.0-develop
          resources:
            limits:
              memory: 8Gi
              cpu: 5000m
            requests:
              memory: 100Mi
              cpu: 100m
          volumeMounts:
            - name: pvc
              mountPath: /config
            - name: media
              mountPath: /PlexMedia
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: readarr
        - name: media
          nfs:
            server: 172.16.1.10
            path: /mnt/BigPool/Media
