kubernetes/Int/deployments/media/readarr/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: readarr
    namespace: media
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:ZGrq4M7Rew0qKGJ3lh1qN3ku1hYrpAQ=,iv:ToP+C0IuvcnsQc8Y37QsAX3yFAL4Qx+NXgMgFS5Z/Sg=,tag:iCctp008dnh8fu1LlQvPNA==,type:str]
          kind: Rule
          priority: 10
          middlewares:
            - name: forwardauth-authentik
              namespace: network
          services:
            - name: readarr
              port: 8787
        - match: ENC[AES256_GCM,data:wq95BdJ3YzhDe8pMeojW25f767Kt2SITLo3+R2H6GZ6FIMQkfTl/A5D1u4vA/iAgZmsVQmG08Ex6/YLGfDjTHfts,iv:KbZDMnEr0XRfDbQIs/+32Q2jKT+wmyPuFxnZVMK88Pw=,tag:oWJQW4muhG4SrlZm4ukAUw==,type:str]
          kind: Rule
          priority: 15
          services:
            - name: readarr
              port: 8787
        - match: ENC[AES256_GCM,data:22Bvq7sSfZqPIWpX6CrAOygTINzbkf8fLX6E,iv:qiqQbHvPDtWfZ9b6HXH7Au1pj4IaAdPM23guomtdPec=,tag:7fGb0M8XXtw00pSDzOeXoQ==,type:str]
          kind: Rule
          services:
            - name: readarr
              port: 8787
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArT2s0aEtWZ1NSSW1XbjlK
[...]
            h3R+5y81apanoABbMGNx1aeJ845PyDekZVa4xPwusbySwqW1XcDprg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-08-31T15:24:38Z"
    mac: ENC[AES256_GCM,data:HHKoSMW56QlO62prhqUEXi78eE9tjQgJCe7suqfjFcBiEvxiC3n3xHbWVM5Iq6tC64BaV/y8ommi49W8MLdTONI25lLH/ShoD68vj01xabplUq8JBSA+Wpu2wfD96T3D7TXap68ttRRpSXCT7UpL2ECBW49Nr07iwu6hhFfzPkc=,iv:81+sMYLjk35IG+uzyVXHuHyt4syJKg3pIeKmGMxjXts=,tag:0+dxdqXgclwvMhjm5FPL4g==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
